<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>xyz.balzaclang.balzac</groupId>
    <version>1.0.0-SNAPSHOT</version>
    <artifactId>xyz.balzaclang.balzac.parent</artifactId>
    <packaging>pom</packaging>

    <properties>
        <mwe2Version>2.12.1</mwe2Version>
        <xtext-version>2.25.0</xtext-version>
        <tycho-version>2.4.0</tycho-version>
        <xsemantics-version>1.20.0-SNAPSHOT</xsemantics-version>
        <xsemantics-p2-url>http://download.eclipse.org/xsemantics/milestones/1.20</xsemantics-p2-url>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>16</maven.compiler.release>
        <tycho.target.execution-environment>JavaSE-16</tycho.target.execution-environment>
        <lib.version>1.0.0-SNAPSHOT</lib.version>
        <!-- Define overridable properties for tycho-surefire-plugin -->
        <platformSystemProperties></platformSystemProperties>
        <moduleProperties></moduleProperties>
        <systemProperties></systemProperties>
        <tycho.testArgLine></tycho.testArgLine>
    </properties>

    <modules>
        <module>../xyz.balzaclang.balzac</module>
        <module>../xyz.balzaclang.balzac.ide</module>
        <module>../xyz.balzaclang.balzac.ui</module>
        <module>../xyz.balzaclang.balzac.web</module>
        <module>../xyz.balzaclang.balzac.target</module>
        <module>../xyz.balzaclang.balzac.feature</module>
        <module>../xyz.balzaclang.balzac.repository</module>
        <module>../xyz.balzaclang.balzac.lib</module>
        <module>../xyz.balzaclang.balzac.logging</module>
        <!-- <module>../xyz.balzaclang.balzac.tests</module> -->
        <!-- <module>../xyz.balzaclang.balzac.ui.tests</module> -->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.xtext</groupId>
                <artifactId>xtext-dev-bom</artifactId>
                <version>${xtext-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>feature-source</id>
                        <goals>
                            <goal>feature-source</goal>
                        </goals>
                        <configuration>
                        <!-- put your configuration here -->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <version>${tycho-version}</version>
                <executions>
                    <execution>
                        <id>attach-p2-metadata</id>
                        <phase>package</phase>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <executionEnvironment>${tycho.target.execution-environment}</executionEnvironment>
                    <target>
                        <artifact>
                            <groupId>xyz.balzaclang.balzac</groupId>
                            <artifactId>xyz.balzaclang.balzac.target</artifactId>
                            <version>${project.version}</version>
                        </artifact>
                    </target>
                    <environments>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
            </plugin>
        </plugins>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>

                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-versions-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>

                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-source-plugin</artifactId>
                    <version>${tycho-version}</version>
                </plugin>

                <!-- https://github.com/eclipse/xtext/issues/1231#issuecomment-401833957 -->
                <plugin>
                    <groupId>org.eclipse.xtext</groupId>
                    <artifactId>xtext-maven-plugin</artifactId>
                    <version>${xtext-version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.xtend</groupId>
                    <artifactId>xtend-maven-plugin</artifactId>
                    <version>${xtext-version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>compile</goal>
                                <goal>xtend-install-debug-info</goal>
                                <goal>testCompile</goal>
                                <goal>xtend-test-install-debug-info</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <outputDirectory>${basedir}/xtend-gen</outputDirectory>
                        <testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                    <configuration>
                        <filesets>
                            <fileset>
                                <directory>${basedir}/xtend-gen</directory>
                                <includes>
                                    <include>**/*</include>
                                </includes>
                            </fileset>
                        </filesets>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-resources-plugin</artifactId>
                                        <versionRange>[2.4.3,)</versionRange>
                                        <goals>
                                            <goal>resources</goal>
                                            <goal>testResources</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.codehaus.mojo</groupId>
                                        <artifactId>build-helper-maven-plugin</artifactId>
                                        <versionRange>[1.9.1,)</versionRange>
                                        <goals>
                                            <goal>add-resource</goal>
                                            <goal>add-source</goal>
                                            <goal>add-test-resource</goal>
                                            <goal>add-test-source</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.eclipse.tycho</groupId>
                                        <artifactId>tycho-compiler-plugin</artifactId>
                                        <versionRange>[0.23.1,)</versionRange>
                                        <goals>
                                            <goal>compile</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.eclipse.tycho</groupId>
                                        <artifactId>tycho-packaging-plugin</artifactId>
                                        <versionRange>[0.23.1,)</versionRange>
                                        <goals>
                                            <goal>build-qualifier</goal>
                                            <goal>build-qualifier-aggregator</goal>
                                            <goal>validate-id</goal>
                                            <goal>validate-version</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.eclipse.tycho</groupId>
                                        <artifactId>target-platform-configuration</artifactId>
                                        <versionRange>[2.4.0,)</versionRange>
                                        <goals>
                                            <goal>target-platform</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- Can be removed after first generator execution https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097 -->
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <compilerArgument>-err:-forbidden</compilerArgument>
                        <useProjectSettings>false</useProjectSettings>
                    </configuration>
                </plugin>
                <!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
                    To skip tests, but still compile them, use: -DskipTests To allow all tests
                    in a pom to pass/fail, use commandline flag: -fae (fail at end) -->
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-surefire-plugin</artifactId>
                    <version>${tycho-version}</version>
                    <configuration>
                        <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
                        <argLine>${tycho.testArgLine} ${platformSystemProperties} ${systemProperties} ${moduleProperties}</argLine>
                        <failIfNoTests>false</failIfNoTests>
                        <useUIHarness>false</useUIHarness>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>codehaus-snapshots</id>
            <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
            <url>http://nexus.codehaus.org/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>codehaus-snapshots</id>
            <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
            <url>http://nexus.codehaus.org/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>
    <profiles>
        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
                <platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
            </properties>
        </profile>
        <profile>
            <id>jdk9-or-newer</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
            </properties>
        </profile>
    </profiles>
</project>
